# wizards-auth-django

./: README.md  db.sqlite3  manage.py  pyproject.toml  setup.py  test_passwordless.py
.github/workflows/: publish.yml
auth_api_django/: asgi.py  settings.py  urls.py  wsgi.py
users/: apps.py  models.py  passwordless_views.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_logintoken.py
